# Eksamen_2023

./: CMakeLists.txt  README.md  Referanser  config.yml  grid.cpp  grid.h  kandidater.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: config.yml
Grid/: grid.cpp  grid.h
Tetrominos/Block/: Block.cpp  Block.h
Tetrominos/Block/blocks/: blocks.cpp
Tetrominos/Position/: Position.cpp  Position.h
Tetrominos/colors/: colors.cpp  colors.h
game/: game.cpp  game.h
include/: Block.hpp  CMakeLists.txt  CalculateTime.hpp  ColisionManager.hpp  CommonUnits.hpp  Keylistner.hpp  Observerer.hpp  Position.hpp  colors.hpp  game.hpp  grid.hpp  keyobserver.hpp
src/: Block.cpp  CMakeLists.txt  ColisionManager.cpp  Position.cpp  blocks.cpp  colors.cpp  game.cpp  grid.cpp  keyobserver.cpp
tests/: CMakeLists.txt  person_test.cpp
